Se realiza modificacion al CSS

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2>Redes Sociales</h2>
             <a href="https://www.linkedin.com/login/es" target="_blank"><img class="redes"
                     src="./multimedia/icono_linkedin.png"></a>
-            <a href="https://www.instagram.com/accounts/login/" target="_blank"><img class="redes"
+            <a href="https://www.instagram.com/accounts/login/" target="_blank"><img
                     src="./multimedia/icono_instagram.png"></a>
             <a href="https://www.facebook.com/login/" target="_blank"><img class="redes"
                     src="./multimedia/icono_facebook.png"></a>
