Se crea el modulo de restaurantes

--- a/html/quienes_somos.html
+++ b/html/quienes_somos.html
@@ -15,17 +15,31 @@
 
 <body>
     <header class="encabezado_quines_s">
-        <img src="../multimedia/logo_hola_vecino.png" alt="Logo de hola vecino">
-        <button class="regreso_inicio"><a href="../index.html"> Inicio </a></button>
+        <a href="../index.html">
+            <img class="logo_header" src="../multimedia/logo_hola_vecino.png">
+        </a>
+        <nav>
+            <ul class="menu">
+                <li class="menu_item">
+                    <a href="../html/tu_reserva.html">Tu Reserva</a>
+                </li>
+                <li class="menu_item">
+                    <a href="../html/quienes_somos.html">¿Quiénes Somos?</a>
+                </li>
+                <li class="menu_item">
+                    <a href="../html/registrarse.html">Registrarse</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <article class="tarjetas_peq_gigantes">
-        <div class="card_res_pequeno">
+        <div class="card_q_somos">
             <img src="../multimedia/peq_comercio.jpg" alt="Un pequeño comercio">
         </div>
-        <div class="card_padre">
+        <div class="card_q_somos">
             <img src="../multimedia/padre_e_hijo.jpg" alt="Un padre y su hijo alistan alimentos">
         </div>
-        <div class="card_vehiculo">
+        <div class="card_q_somos">
             <img src="../multimedia/car_restaurante.jpg" alt="restaurante en un vehiculo">
         </div>
     </article>
