--- a/html/tu_reserva.html
+++ b/html/tu_reserva.html
@@ -19,10 +19,24 @@
 <body>
 
 <!-- encabezado -->
-  <header class="encabezado_reserva">
-    <img src="../multimedia/logo_hola_vecino.png" alt="Logo de hola vecino">
-    <button class="regreso_inicio"><a href="../index.html"> Inicio </a></button>
-  </header>
+<header class="encabezado">
+  <a href="../index.html">
+      <img class="logo_header" src="../multimedia/logo_hola_vecino.png">
+  </a>
+  <nav>
+      <ul class="menu">
+          <li class="menu_item">
+              <a href="../html/tu_reserva.html">Tu Reserva</a>
+          </li>
+          <li class="menu_item">
+              <a href="../html/quienes_somos.html">¿Quiénes Somos?</a>
+          </li>
+          <li class="menu_item">
+              <a href="../html/registrarse.html">Registrarse</a>
+          </li>
+      </ul>
+  </nav>
+</header>
 
 <!-- Seccion del slider -->
   <article class="slider_reserva">
