--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>HolaVecino</title>
-    <meta name="keywords" content="restaurante, agendar restaurante,comida, comida cerca, comida rica, restaurante barato, licores, cerveza">
+    <meta name="keywords"
+        content="restaurante, agendar restaurante,comida, comida cerca, comida rica, restaurante barato, licores, cerveza">
 
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./multimedia/logo_hola_vecino.png" type="image/x-icon">
@@ -57,22 +58,24 @@
             <h2>Nuestras Categorias</h2>
             <div class="card_categorias">
                 <div class="card_mejor_calificados">
-                    <img src="./multimedia/ganador.jpg">
-                    <h4>Los mejor calificados</h4>
+                    <img src="./multimedia/ganador.jpg" alt="imagen seccion restaurantes mejor calificados">
+                    <h4 class="card_categorias_tt">Los mejor calificados</h4>
                 </div>
                 <div class="card_restaurantes">
-                    <img src="./multimedia/restaurante.jpg">
-                    <h4>Restaurantes</h4>
+                    <a href="./html/restaurantes.html">
+                    <img src="./multimedia/restaurante.jpg" alt="imagen seccion restaurante">
+                    </a>
+                    <h4 class="card_categorias_tt">Restaurantes</h4>
                 </div>
                 <div class="card_bebidas">
-                    <img src="./multimedia/licores.jpg">
-                    <h4>Bares y licores</h4>
+                    <img src="./multimedia/licores.jpg" alt="imagen seccion bebidas">
+                    <h4 class="card_categorias_tt">Bares y licores</h4>
                 </div>
                 <div class="card_vinculate">
                     <a href="./html/registrarse.html">
-                        <img src="./multimedia/vinculate.jpg">
+                        <img src="./multimedia/vinculate.jpg" alt="imagen seccion vinculate">
                     </a>
-                    <h4>Vincula tu negocio</h4>
+                    <h4 class="card_categorias_tt">Vincula tu negocio</h4>
                 </div>
             </div>
         </section>
@@ -98,16 +101,13 @@
     <footer class="pie_pagina">
         <div class="pie_pagina_redes">
             <h2>Redes Sociales</h2>
-            <a href="https://www.linkedin.com/login/es" target="_blank"><img class="redes"
-                    src="./multimedia/icono_linkedin.png"></a>
-            <a href="https://www.instagram.com/accounts/login/" target="_blank"><img
-                    src="./multimedia/icono_instagram.png"></a>
-            <a href="https://www.facebook.com/login/" target="_blank"><img class="redes"
-                    src="./multimedia/icono_facebook.png"></a>
+            <a href="https://www.linkedin.com/login/es" target="_blank"><img class="redes" alt="linkedin" src="./multimedia/linkedin.svg"></a>
+            <a href="https://www.instagram.com/accounts/login/" target="_blank"><img class="redes" alt="instagram" src="./multimedia/instagram.svg"></a>
+            <a href="https://www.facebook.com/login/" target="_blank"><img class="redes" alt="facebook" src="./multimedia/facebook.svg"></a>
         </div>
         <div class="pie_pagina_logo">
             <a href="./index.html">
-                <img class="logo_header" src="./multimedia/logo_hola_vecino.png">
+                <img class="logo_header" alt="logo hola vecino" src="./multimedia/logo_hola_vecino.png">
             </a>
         </div>
         <div class="pie_pagina_contacto">
