--- a/html/registrarse.html
+++ b/html/registrarse.html
@@ -15,8 +15,22 @@
 
 <body>
     <header class="encabezado_registrarse">
-        <img src="../multimedia/logo_hola_vecino.png" alt="Logo de hola vecino">
-        <button class="regreso_inicio"><a href="../index.html"> Inicio </a></button>
+        <a href="../index.html">
+            <img class="logo_header" src="../multimedia/logo_hola_vecino.png">
+        </a>
+        <nav>
+            <ul class="menu">
+                <li class="menu_item">
+                    <a href="../html/tu_reserva.html">Tu Reserva</a>
+                </li>
+                <li class="menu_item">
+                    <a href="../html/quienes_somos.html">¿Quiénes Somos?</a>
+                </li>
+                <li class="menu_item">
+                    <a href="../html/registrarse.html">Registrarse</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <!-- seccion -->
